# storage/api-docs/api-docs.json
@@ -48,6 +48,30 @@
                         "description": "Devuelve un json con el error: 'error en els paràmetres'."
                     }
                 }
+            },
+            "delete": {
+                "tags": [
+                    "publication"
+                ],
+                "summary": "dado un username se elimina la relacion like con la publicacion id_publicacion",
+                "description": "dado un username se elimina la relacion like con la publicacion id_publicacion",
+                "operationId": "App\\Http\\Controllers\\Api\\LikeDataController::unset_like",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Valor del token_access",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Devuelve un json con el mensaje: 'relació eliminada correctament'."
+                    },
+                    "400": {
+                        "description": "Devuelve un json con el error: 'error en els paràmetres'."
+                    }
+                }
             }
         },
         "/api/user/{id_user}/publications": {
